--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>Biology Model Project</title>
     <link href="./CSS/style.css" rel="stylesheet" type="text/css"/>
     <link href="./CSS/segment-switch.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -15,6 +15,10 @@
 </head>
 
 <body>
+    <div id="name-tag">
+        <p>Build By William Chou</p>
+    </div>
+    
     <form id="segment-switch">
         <div id="left-div" class="switch-option">
             <label for="primitive-earth">Primitive Earth</label>
