Update website metadata and project info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <meta name="description"
             content="2024 Clovis West High School Biology Class Final Project about the representation of the Carbon Cycle in the Earth as a model. Build By William Chou.">
         <meta name="author" content="William Chou">
-        <title>Biology Model Project</title>
+        <meta name="creator" content="William Chou" />
+        <meta name="publisher" content="William Chou" />
+        <meta name="application-name" content="Carbon Cycle Model" />
+
+        <meta property="og:title" content="Biology Project - Carbon Cycle Model" />
+        <meta property="og:description" content="2024 Clovis West High School Biology Class Final Project about the representation of the Carbon Cycle in the Earth as a model. Build By William Chou." />
+        <meta property="og:type" content="website" />
+
+        <title>Biology Project - Carbon Cycle Model</title>
+
         <link href="./CSS/style.css" rel="stylesheet" type="text/css" />
         <link href="./CSS/segment-switch.css" rel="stylesheet" type="text/css" />
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -57,8 +66,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="./JS/index.js" type="module"></script>
-
-        <!-- <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script> -->
     </body>
 
 </html>
