Add keywords and robots metadata

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
         <meta name="creator" content="William Chou" />
         <meta name="publisher" content="William Chou" />
         <meta name="application-name" content="Carbon Cycle Model" />
+        <meta name="keywords" content="Biology, Carbon Cycle, Primitive Earth, Present Earth" />
+        <meta name="robots" content="none" />
 
         <meta property="og:title" content="Biology Project - Carbon Cycle Model" />
-        <meta property="og:description" content="2024 Clovis West High School Biology Class Final Project about the representation of the Carbon Cycle in the Earth as a model. Build By William Chou." />
+        <meta property="og:description"
+            content="2024 Clovis West High School Biology Class Final Project about the representation of the Carbon Cycle in the Earth as a model. Build By William Chou." />
         <meta property="og:type" content="website" />
 
         <title>Biology Project - Carbon Cycle Model</title>
